navbar collapse fixed

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -153,6 +153,7 @@
     background-color: black;
     opacity: 0;
     justify-content: space-around;
+    font-size: 1px;
   }
 
   .sidebar_logo{
@@ -184,6 +185,7 @@
     opacity: 1;
     z-index: 102;
     right: 0;
+    font-size: 16px;
   }
 
   .active_navbar {
